--- a/style2.css
+++ b/style2.css
@@ -1,13 +1,42 @@
 #testDiv1 {
-  width: 35%;
+  width: 20%;
   font-size: 1em;
   padding: 1em;
   margin: 2em;
+  float: right;
 }
 
 #testDiv2 {
-  width: 35%;
+  width: 60%;
   font-size: 1em;
   padding: 1em;
   margin: 2em;
+  float: left;
+}
+
+#testDiv3{
+  width: 20%;
+  font-size: 1em;
+  padding: 1em;
+  margin: 2em;
+  float: left;
+}
+
+
+#list1{
+  padding: 0px;
+}
+
+#list1 li{
+  border: black 1px dashed;
+  padding: 10px;
+  width: 200px;
+  margin: 20px;
+  display: inline-block;
+}
+
+#testDivPosition{
+  position: absolute;
+  right: 100px;
+  bottom: 0px;
 }
